Icons: Fix controlbar play icon alignment

--- a/skin/sass/_icons.sass
+++ b/skin/sass/_icons.sass
@@ -30,7 +30,10 @@
   content: "\e006"
 
 .fp-playbtn:before
+  /* autoprefixer: off */
   content: "\e007"
+  display: flex
+  line-height: 0
 
 .fp-share:before
   content: "\e009"
